--- a/PeopleSearch/PeopleSearch/ClientApp/src/app/home/home.component.html
+++ b/PeopleSearch/PeopleSearch/ClientApp/src/app/home/home.component.html
@@ -1,13 +1,35 @@
-<h1>Hello, world!</h1>
-<p>Welcome to your new single-page application, built with:</p>
-<ul>
-  <li><a href='https://get.asp.net/'>ASP.NET Core</a> and <a href='https://msdn.microsoft.com/en-us/library/67ef8sbd.aspx'>C#</a> for cross-platform server-side code</li>
-  <li><a href='https://angular.io/'>Angular</a> and <a href='http://www.typescriptlang.org/'>TypeScript</a> for client-side code</li>
-  <li><a href='http://getbootstrap.com/'>Bootstrap</a> for layout and styling</li>
-</ul>
-<p>To help you get started, we've also set up:</p>
-<ul>
-  <li><strong>Angular CLI integration</strong>. In development mode, there's no need to run <code>ng serve</code>. It runs in the background automatically, so your client-side resources are dynamically built on demand and the page refreshes when you modify any file.</li>
-  <li><strong>Efficient production builds</strong>. In production mode, development-time features are disabled, and your <code>dotnet publish</code> configuration automatically invokes <code>ng build</code> to produce minified, ahead-of-time compiled JavaScript files.</li>
-</ul>
-<p>The <code>ClientApp</code> subdirectory is a standard Angular CLI application. If you open a command prompt in that directory, you can run any <code>ng</code> command (e.g., <code>ng test</code>), or use <code>npm</code> to install extra packages into it.</p>
+<h1>People Search</h1>
+
+<mat-form-field>
+  <input [formControl]="searchBox"
+    type="text"
+    matInput
+    placeholder="Type to Begin People Search"
+    matTooltip="Enter a person's full name here to search"/>
+  <mat-error>Invalid Search</mat-error>
+</mat-form-field>
+
+<table mat-table [dataSource]="searchResults" class="mat-elevation-z8">
+  <ng-container matColumnDef="first">
+    <th mat-header-cell *matHeaderCellDef> First </th>
+    <td mat-cell *matCellDef="let person"> {{person.FirstName}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="middle">
+    <th mat-header-cell *matHeaderCellDef> Middle </th>
+    <td mat-cell *matCellDef="let person"> {{person.MiddleName[0]}}. </td>
+  </ng-container>
+
+  <ng-container matColumnDef="last">
+    <th mat-header-cell *matHeaderCellDef> Last </th>
+    <td mat-cell *matCellDef="let person"> {{person.LastName}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="age">
+    <th mat-header-cell *matHeaderCellDef> Age </th>
+    <td mat-cell *matCellDef="let person"> {{person.Age}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
