--- a/PeopleSearch/PeopleSearch/ClientApp/src/app/home/home.component.html
+++ b/PeopleSearch/PeopleSearch/ClientApp/src/app/home/home.component.html
@@ -4,32 +4,36 @@
   <input [formControl]="searchBox"
     type="text"
     matInput
-    placeholder="Type to Begin People Search"
+    placeholder="Type to Search"
     matTooltip="Enter a person's full name here to search"/>
   <mat-error>Invalid Search</mat-error>
 </mat-form-field>
 
-<table mat-table [dataSource]="searchResults" class="mat-elevation-z8">
-  <ng-container matColumnDef="first">
-    <th mat-header-cell *matHeaderCellDef> First </th>
-    <td mat-cell *matCellDef="let person"> {{person.FirstName}} </td>
-  </ng-container>
+<section class="mat-elevation-z8">
+  <mat-progress-bar *ngIf="isSearching" [mode]="'indeterminate'" ></mat-progress-bar>
+  <table mat-table [dataSource]="searchResults" class="search-results">
+    <ng-container matColumnDef="first">
+      <th mat-header-cell *matHeaderCellDef> First </th>
+      <td mat-cell *matCellDef="let person"> {{person.firstName}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="middle">
-    <th mat-header-cell *matHeaderCellDef> Middle </th>
-    <td mat-cell *matCellDef="let person"> {{person.MiddleName[0]}}. </td>
-  </ng-container>
+    <ng-container matColumnDef="middle">
+      <th mat-header-cell *matHeaderCellDef> Middle </th>
+      <td mat-cell *matCellDef="let person"> {{person.middleName}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="last">
-    <th mat-header-cell *matHeaderCellDef> Last </th>
-    <td mat-cell *matCellDef="let person"> {{person.LastName}} </td>
-  </ng-container>
+    <ng-container matColumnDef="last">
+      <th mat-header-cell *matHeaderCellDef> Last </th>
+      <td mat-cell *matCellDef="let person"> {{person.lastName}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="age">
-    <th mat-header-cell *matHeaderCellDef> Age </th>
-    <td mat-cell *matCellDef="let person"> {{person.Age}} </td>
-  </ng-container>
+    <ng-container matColumnDef="age">
+      <th mat-header-cell *matHeaderCellDef> Age </th>
+      <td mat-cell *matCellDef="let person"> {{person.age}} </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <div *ngIf="noResults" class="no-results">No Results Found</div>
+</section>
