--- a/PeopleSearch/PeopleSearch/ClientApp/src/app/home/home.component.html
+++ b/PeopleSearch/PeopleSearch/ClientApp/src/app/home/home.component.html
@@ -1,52 +1,71 @@
-<h1>People Search</h1>
+<mat-sidenav-container class="side-nav-container">
+  <mat-sidenav [opened]="showDetails" [mode]="drawerMode" position="end">
+    <section *ngIf="showDetails" class="details-section">
+      <button
+        mat-icon-button
+        type="button"
+        (click)="deselectPerson()">
+        <mat-icon>arrow_back_ios</mat-icon>
+      </button>
+      {{selectedPerson.firstName}}
+    </section>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <section [ngClass]="{'drawer-open': selectedPerson !== undefined}" class="search-section">
+      <div class="search-options">
+        <mat-form-field class="search-box">
+          <input [formControl]="searchBox"
+            type="text"
+            class="search-box"
+            [attr.required]="false"
+            matInput
+            placeholder="Type to Search"
+            matTooltip="Enter a person's full name here to search"/>
+          <mat-error>First, last, and/or middle name required. Alphabetic characters only.</mat-error>
+        </mat-form-field>
+        <mat-form-field class="delay-input">
+          <input [formControl]="delayInput"
+              type="number"
+              min="{delayMin}"
+              max="{delayMax}"
+              matInput
+              placeholder="Delay"
+              matTooltip="Enter a simulated delay time in milliseconds"/>
+              <mat-error>Must be <wbr/> <span class="no-wrap">{{delayMin}}-{{delayMax}}ms</span></mat-error>
+        </mat-form-field>
+      </div>
 
-<div class="search-options">
-  <mat-form-field class="search-box">
-    <input [formControl]="searchBox"
-      type="text"
-      class="search-box"
-      matInput
-      placeholder="Type to Search"
-      matTooltip="Enter a person's full name here to search"/>
-    <mat-error>First, last, and/or middle name required. Alphabetic characters only.</mat-error>
-  </mat-form-field>
-  <mat-form-field class="delay-input">
-    <input [formControl]="delayInput"
-        type="number"
-        min="{delayMin}"
-        max="{delayMax}"
-        matInput
-        placeholder="Delay"
-        matTooltip="Enter a simulated delay time in milliseconds"/>
-        <mat-error>Must be <wbr/> <span class="no-wrap">{{delayMin}}-{{delayMax}}ms</span></mat-error>
-  </mat-form-field>
-</div>
+      <section class="search-results mat-elevation-z8">
+        <mat-progress-bar *ngIf="isSearching" [mode]="'indeterminate'" ></mat-progress-bar>
+        <table mat-table [dataSource]="searchResults" class="search-results">
+          <ng-container matColumnDef="first">
+            <th mat-header-cell *matHeaderCellDef> First </th>
+            <td mat-cell *matCellDef="let person"> {{person.firstName}} </td>
+          </ng-container>
 
-<section class="mat-elevation-z8">
-  <mat-progress-bar *ngIf="isSearching" [mode]="'indeterminate'" ></mat-progress-bar>
-  <table mat-table [dataSource]="searchResults" class="search-results">
-    <ng-container matColumnDef="first">
-      <th mat-header-cell *matHeaderCellDef> First </th>
-      <td mat-cell *matCellDef="let person"> {{person.firstName}} </td>
-    </ng-container>
+          <ng-container matColumnDef="middle">
+            <th mat-header-cell *matHeaderCellDef> Middle </th>
+            <td mat-cell *matCellDef="let person"> {{person.middleName}} </td>
+          </ng-container>
 
-    <ng-container matColumnDef="middle">
-      <th mat-header-cell *matHeaderCellDef> Middle </th>
-      <td mat-cell *matCellDef="let person"> {{person.middleName}} </td>
-    </ng-container>
+          <ng-container matColumnDef="last">
+            <th mat-header-cell *matHeaderCellDef> Last </th>
+            <td mat-cell *matCellDef="let person"> {{person.lastName}} </td>
+          </ng-container>
 
-    <ng-container matColumnDef="last">
-      <th mat-header-cell *matHeaderCellDef> Last </th>
-      <td mat-cell *matCellDef="let person"> {{person.lastName}} </td>
-    </ng-container>
+          <ng-container matColumnDef="age">
+            <th mat-header-cell *matHeaderCellDef> Age </th>
+            <td mat-cell *matCellDef="let person"> {{person.age}} </td>
+          </ng-container>
 
-    <ng-container matColumnDef="age">
-      <th mat-header-cell *matHeaderCellDef> Age </th>
-      <td mat-cell *matCellDef="let person"> {{person.age}} </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-  <div *ngIf="noResults" class="no-results">No Results Found</div>
-</section>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let person; columns: displayedColumns;"
+            (click)="personSelected(person)"
+            class="selectable-item"
+            [ngClass]="{'selected-item': selectedPerson === person}"></tr>
+        </table>
+        <div *ngIf="noResults" class="no-results">No Results Found</div>
+      </section>
+    </section>
+  </mat-sidenav-content>
+</mat-sidenav-container>
