--- a/PeopleSearch/PeopleSearch/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/PeopleSearch/PeopleSearch/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -11,9 +11,9 @@
           <li class="nav-item" [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
             <a class="nav-link text-dark" [routerLink]='["/"]'>Home</a>
           </li>
-          <li class="nav-item" [routerLinkActive]='["link-active"]'>
+          <!-- <li class="nav-item" [routerLinkActive]='["link-active"]'>
             <a class="nav-link text-dark" [routerLink]='["/add-people"]'>Add People</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
