--- a/PeopleSearch/PeopleSearch/ClientApp/src/app/app.component.css
+++ b/PeopleSearch/PeopleSearch/ClientApp/src/app/app.component.css
@@ -1,6 +1,31 @@
+.container {
+  transition: width margin padding 1s ease-out;
+}
+
+.container.drawer-open {
+  box-shadow: 0 10px 8px 1px rgba(136, 136, 136, 0.3);
+}
+
 @media (max-width: 767px) {
   /* On small screens, the nav menu spans the full width of the screen. Leave a space for it. */
   .body-content {
     padding-top: 50px;
+  }
+
+  .container.drawer-open {
+    box-shadow: none;
+  }
+
+  .container.drawer-open mat-sidenav.mat-drawer {
+    border: none;
+  }
+}
+
+@media (max-device-width: 1280px) and (orientation: landscape) {
+  .container.drawer-open {
+    padding-left: 0;
+    padding-right: 0;
+    margin: 0 8px;
+    max-width: initial;
   }
 }
