--- a/PeopleSearch/PeopleSearch/ClientApp/src/app/app.component.html
+++ b/PeopleSearch/PeopleSearch/ClientApp/src/app/app.component.html
@@ -1,6 +1,7 @@
 <body>
   <app-nav-menu></app-nav-menu>
-  <div class="container">
+  <div class="container"
+       [ngClass]="{ 'drawer-open': drawerService.isOpen }">
     <router-outlet></router-outlet>
   </div>
 </body>
