--- a/PeopleSearch/PeopleSearch/ClientApp/src/styles.css
+++ b/PeopleSearch/PeopleSearch/ClientApp/src/styles.css
@@ -1,1 +1,23 @@
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+body {
+  position: absolute;
+  top:0;
+  bottom:0;
+  left: 0;
+  right: 0;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+body > app-nav-menu {
+  flex-shrink: 0;
+  flex-grow: 0;
+}
+
+body > div.container {
+  flex-shrink: 1;
+  flex-grow: 1;
+  position: relative;
+  transition: box-shadow 0.5s ease-out;
+}
